# aiohttp-mcp-client

./: .env.example  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/: pr-labeler.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml
aiohttp_mcp_client/: __init__.py  _transport.py  _types.py  client.py
examples/: client.py  server.py
tests/: test_cancellation.py  test_client.py  test_notifications.py  test_placeholder.py  test_transport.py  test_types.py
