[build-system]
requires = ["hatchling>=1.18.0,<2.0.0", "hatch-vcs>=0.4.0,<1.0.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[project]
name = "aiohttp-mcp-client"
dynamic = ["version"]
description = "MCP client built on top of aiohttp"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Taras Drapalyuk", email = "taras@drapalyuk.com" }
]
dependencies = [
    "aiohttp>=3.9.0,<4.0.0",
]
keywords = [
    "mcp",
    "model-context-protocol",
    "aiohttp",
    "ai",
    "llm",
    "client",
    "async",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/kulapard/aiohttp-mcp-client"
Repository = "https://github.com/kulapard/aiohttp-mcp-client.git"
Documentation = "https://github.com/kulapard/aiohttp-mcp-client#readme"

[tool.hatch.build.targets.wheel]
packages = ["aiohttp_mcp_client"]

[tool.hatch.build.targets.sdist]
include = [
    "aiohttp_mcp_client/**/*.py",
    "aiohttp_mcp_client/py.typed",
    "README.md",
    "LICENSE",
]

[dependency-groups]
dev = [
    "aiohttp-mcp",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-aiohttp>=1.1.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.1.1",
    "pytest-sugar>=1.0.0",
]

[tool.hatch.build]
only-packages = true
artifacts = ["aiohttp_mcp_client/py.typed"]

[tool.mypy]
strict = true
exclude = ["examples/"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false
warn_return_any = false

[[tool.mypy.overrides]]
module = "aiohttp_mcp.*"
ignore_missing_imports = true

[tool.ty.src]
exclude = ["tests/", "examples/"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "RUF", # ruff
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    "G", # flake8-logging-format
    "T20", # flake8-print
    "UP", # pyupgrade
    "PLC0415", # import should be at the top-level of a file
]

[tool.ruff.lint.per-file-ignores]
"examples/*.py" = ["T201"]  # Allow print statements in examples
"tests/*.py" = ["C901"]  # Allow complex test fixtures

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 60

[tool.pytest.ini_options]
addopts = """
    --cov=aiohttp_mcp_client
"""
asyncio_mode = "auto"

[tool.codespell]
skip = '.git,*.pdf,*.svg,Makefile,.venv,_build'

[tool.coverage.run]
branch = true

[tool.coverage.report]
skip_covered = true
exclude_also = [
    "def __repr__",
    "if self\\.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
    "if TYPE_CHECKING",
    "assert False",
    "^\\s*\\.\\.\\.\\s*$",
]

